# ecss-services

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.orig  .gitmodules  .gitmodules.orig  CMakeLists.txt  CMakeLists.txt.orig  Dockerfile  Doxyfile  README.md  conan-profile  conan-profile-ikos  conan-settings.yml  conanfile.py  conanfile.txt  cppcheck-addon-ctu-file-list  doxygen.conf  main.cpp  report.xml
   cmake-build-debug/Debug /: CMakeCache.txt
ci/: .clang-tidy  clang-format.sh  clang-tidy.sh  cppcheck-misra.sh  cppcheck.sh  lcovrc  pages_deploy.sh  summarizer.py  suppressions.txt  vera.profile  vera.sh
ci/page_style/: custom_format.css  epilog.html
conan-build/: CMakePresets.json  Catch2-Target-release.cmake  Catch2-release-x86_64-data.cmake  Catch2Config.cmake  Catch2ConfigVersion.cmake  Catch2Targets.cmake  cmakedeps_macros.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  etl-Target-release.cmake  etl-config-version.cmake  etl-config.cmake  etl-release-x86_64-data.cmake  etlTargets.cmake
docs/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  Makefile  README.MD  code_style.md  conf.py  design.md  doxygen.conf  ecss_overview.md  error_handling.md  filesystem.md  index.md  index.rst  installation.md  protocols.md  sphinx.conf  usage_with_microcontroller.md  writing_code.md
docs/cmake/: FindPythonModule.cmake  FindSphinx.cmake  UseCombinedDocs.cmake  UseDoxygen.cmake
docs/src/: GettingStarted.rst  Mainpage.rst
inc/: ECSSMessage.hpp  ECSS_Definitions.hpp  ECSS_ST_Definitions.hpp  ErrorHandler.hpp  ErrorHandler.hpp.orig  Logger.hpp  Message.h  Message.hpp  MessageParser.hpp  Service.hpp  ServicePool.hpp  ServicePool.hpp.orig  etl_profile.h  macros.hpp
inc/Helpers/: AllMessageTypes.hpp  AllReportTypes.hpp  AppProcessConfiguration.hpp  ApplicationSelectionConfiguration.hpp  CRCHelper.hpp  FileCopyOperationIdGenerator.hpp  FileSystemRegistry.hpp  FilepathValidators.hpp  Filesystem.hpp  ForwardControlConfiguration.hpp  HousekeepingStructure.hpp  Instant.hpp  Instant.tpp  LazyParameter.hpp  NotifyParameter.hpp  PMON.hpp  PMONBase.hpp  PacketSelectionConfiguration.hpp  PacketStore.hpp  Parameter.hpp  RepositoryClassifier.hpp  Result.hpp  Statistic.hpp  Time.hpp  TimeAndDate.hpp  TimeFormats.hpp  TimeGetter.hpp  TimeHelper.hpp  TimeStamp.hpp  TimeStamp.tpp  TypeDefinitions.hpp  TypedefDefinitions.hpp  UTCTimestamp.hpp  bitset3D.hpp  lfs_stub.h
inc/Parameters/: Parameters.hpp
inc/Platform/: ParameterStatisticsInitialization.hpp
inc/Services/: DummyService.hpp  EnvironmentalTestingService.hpp  EventActionService.hpp  EventReportService.hpp  FileManagementService.hpp  FunctionManagementService.hpp  HousekeepingDefinitions.hpp  HousekeepingService.hpp  HousekeepingStructure.hpp  LargePacketTransferService.hpp  MemMangService.hpp  MemoryManagementService.hpp  OnBoardMonitoringService.hpp  PacketSelectionSubservice.hpp  PacketStore.hpp  Parameter.hpp  ParameterService.hpp  ParameterServiceYamcs.hpp  ParameterStatisticsService.hpp  RealTimeForwardingControlService.hpp  ReqVerifService.hpp  RequestVerificationService.hpp  Statistic.hpp  StorageAndRetrievalService.hpp  TestService.hpp  TimeBasedCommandSchedulingService.hpp  TimeBasedSchedulingService.hpp  TimeManagementService.hpp
inc/Time/: Time.hpp  TimeStamp.hpp  TimeStamp.tpp  UTCTimestamp.hpp
inc/etl/: String.hpp
lib/littlefs/: lfs.c
lib/logger/: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
lib/logger/inc/: Logger.hpp  Logger_Definitions.hpp
lib/logger/inc/etl/: String.hpp
src/: ECSSMessage.cpp  ErrorHandler.cpp  Logger.cpp  Message.cpp  MessageParser.cpp  MessageParser.cpp.orig  Service.cpp  ServicePool.cpp  main.cpp  main.cpp.orig
src/Helpers/: AllMessageTypes.cpp  AllReportTypes.cpp  AllReportTypes.cpp.7117.ctu-info  AppProcessConfiguration.cpp  CRCHelper.cpp  FilepathValidators.cpp  FilepathValidators.cpp.7119.ctu-info  HousekeepingStructure.cpp  Instant.cpp  PMON.cpp  PMONBase.cpp  PacketStore.cpp  Statistic.cpp  TimeAndDate.cpp  TimeFormats.cpp  TimeHelper.cpp  UTCTimestamp.cpp  lfs_stub.c  lfs_util_stub.c
src/Parameters/: Parameters.cpp
src/Platform/: ParameterStatisticsInitialization.cpp  README.md  TestMemory.cpp
src/Services/: EventActionService.cpp  EventReportService.cpp  FileManagementService.cpp  FileManagementService.cpp.9355.ctu-info  FunctionManagementService.cpp  FunctionManagementService.cpp.9359.ctu-info  HousekeepingDefinitions.cpp  HousekeepingService.cpp  HousekeepingService.cpp.9373.ctu-info  HousekeepingStructure.cpp  LargePacketTransferService.cpp  MemMangService.cpp  MemoryManagementService.cpp  OnBoardMonitoringService.cpp  PacketSelectionSubservice.cpp  PacketStore.cpp  Parameter.cpp  ParameterService.cpp  ParameterService.cpp.9377.ctu-info  ParameterStatisticsService.cpp  ParameterStatisticsService_BACKUP_58086.cpp  ParameterStatisticsService_LOCAL_58086.cpp  ParameterStatisticsService_REMOTE_58086.cpp  RealTimeForwardingControlService.cpp  RealTimeForwardingControlService.cpp.9395.ctu-info  ReqVerifService.cpp  RequestVerificationService.cpp  Statistic.cpp  StorageAndRetrievalService.cpp  StorageAndRetrievalService.cpp.9397.ctu-info  TestService.cpp  TimeBasedCommandSchedulingService.cpp  TimeBasedSchedulingService.cpp  TimeManagement.cpp  TimeManagementService.cpp
src/Time/: UTCTimestamp.cpp  UTCTimestamp.cpp.9424.ctu-info
test/: ErrorHandler.cpp  ErrorHandlerTests.cpp  Message.cpp  MessageParser.cpp  MessageParserTests.cpp  MessageTests.cpp  TestDefinitions.hpp  TestPlatform.cpp  memoryManagementTestFile.txt  tests.cpp
test/Helpers/: CRCHelper.cpp  CRCHelperTests.cpp  Instant.cpp  PacketStore.cpp  PacketStoreTests.cpp  PlatformParameters.cpp  ResultTests.cpp  Statistic.cpp  StatisticTests.cpp  TestMemory.cpp  TimeAndDate.cpp  TimeConverter.cpp  TimeFormats.cpp  TimeHelper.cpp  TimeStamp.cpp  systemParameters.cpp
test/Time/: TimeFormats.cpp  (+3 more)
tests/: Message.cpp  TestPlatform.cpp
(+127 files in other folders)
